--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,9 @@
-/* Resetando margens, padding e definindo box-sizing */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* Definindo o estilo global para o corpo */
 body {
   font-family: 'Press Start 2P', cursive;
   background-color: #f4f4f9;
@@ -15,7 +13,6 @@ body {
   min-height: 100vh;
 }
 
-/* Estilo do cabeçalho */
 header {
   background-color: #2d3b55;
   color: #fff;
@@ -23,20 +20,18 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed; /* Fixa o header no topo */
-  top: 0;  /* Alinha no topo da tela */
-  left: 0;  /* Alinha à esquerda */
-  width: 100%; /* Garante que o header ocupe toda a largura */
+  position: fixed; 
+  top: 0;  
+  left: 0;  
+  width: 100%; 
   z-index: 1000; /* Garante que o header fique acima de outros elementos */
 }
 
-/* Estilizando o título da logo */
 header .logo h1 {
   font-size: 24px;
   color: chartreuse;
 }
 
-/* Estilizando o menu */
 header nav ul {
   display: flex;
   list-style: none;
@@ -47,12 +42,10 @@ header nav ul li {
   margin: 0 15px;
 }
 
-/* Fixando a posição do menu abaixo da logo */
 body {
   padding-top: 80px; /* Ajusta o conteúdo da página para evitar que fique por trás do header fixo */
 }
 
-/* Estilo para o botão de menu (hamburguer) */
 #menu-toggle {
   display: none;
   background-color: transparent;
@@ -65,6 +58,9 @@ body {
 header nav button {
   display: none;
 }
+
+
+/* ____________________________________________________________ */
 
 /* Seções de conteúdo */
 section {
@@ -125,7 +121,7 @@ footer p {
 }
 
 
-/* Responsividade para telas pequenas */
+/*telas pequenas */
 @media (max-width: 768px) {
   header nav ul {
     display: none;
@@ -163,10 +159,9 @@ footer p {
 }
 
 
-/* _________________________________________*/
+  /* ___________________________________________________________ */
 
 
-/* Estilo do container do loader no canto superior esquerdo */
 .loader-container {
   position: absolute;
   top: 0;
@@ -178,13 +173,12 @@ footer p {
   z-index: 1000;
 }
 
-/* Ajuste do tamanho do loader */
 .loader {
-  border: 16px solid rgb(128, 0, 0); /* Cor de fundo do círculo */
-  border-top: 16px solid rgb(0, 255, 34); /* Cor da parte que gira */
+  border: 16px solid rgb(128, 0, 0); 
+  border-top: 16px solid rgb(0, 255, 34);
   border-radius: 50%;
-  width: 60px;  /* Ajuste o tamanho do loader aqui */
-  height: 60px; /* Ajuste o tamanho do loader aqui */
+  width: 60px;  
+  height: 60px;
   animation: spin 2s linear infinite;
 }
 
@@ -199,8 +193,8 @@ footer p {
 /* __________________________________________________________ */
 
 .linguagens{
-  position: relative; /* Garante que o deslocamento seja relativo à posição original */
-  left: 50px; /* Move a seção 50px para a direita */
+  position: relative;
+  left: 50px;
   margin-top: 10px;
   margin-bottom: 30px;
   display: flex;
@@ -210,11 +204,10 @@ footer p {
   height: 300px;
   animation: appear 2s ease-out;
   animation-timeline: view();
-  /* animation-range: entry 0% cover 25%; */
 }
 
 .linguagens .quadrado{
-  margin-left: 140px; /* Adiciona espaçamento para empurrar à direita */
+  margin-left: 140px; 
   height: 180px;
   width: 180px;
   border-radius: 20%;
@@ -256,7 +249,7 @@ footer p {
 /* ----------------------------- */
 
 .linguagens .quadrado img{
-  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  -webkit-filter: grayscale(100%); 
   filter: grayscale(100%);
   height: 130px;
   width: 130px;
@@ -264,33 +257,33 @@ footer p {
 }
 
 .linguagens .quadrado img:hover{
-  -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+  -webkit-filter: grayscale(0%); 
   filter: grayscale(0%);
 }
 
 /* Para tablets e telas médias */
 @media (max-width: 768px) {
   .linguagens {
-    width: 90%; /* Aumenta o espaço para o layout */
-    justify-content: center; /* Centraliza os itens */
+    width: 90%; 
+    justify-content: center; 
   }
 
   .linguagens .quadrado {
     height: 150px;
-    width: 150px; /* Reduz o tamanho dos quadrados */
+    width: 150px; 
   }
 
   .linguagens .quadrado img {
     height: 110px;
-    width: 110px; /* Reduz o tamanho das imagens */
+    width: 110px; 
   }
 }
 
-/* Para smartphones e telas pequenas */
+/* Telas pequenas */
 @media (max-width: 480px) {
   .linguagens {
-    flex-direction: column; /* Empilha os quadrados verticalmente */
-    align-items: center; /* Centraliza os itens */
+    flex-direction: column; 
+    align-items: center;
   }
 
   .linguagens .quadrado {
